test_suite5/ALAN/test_suite/alan-2022-examples/failing/007110_mutation.alan
source H0 begin put "=ZB\"" ., "4([" end
